feat: adiciona rodapé

--- a/index.html
+++ b/index.html
@@ -6,15 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="./style.css">
     <title>Airbngama</title>
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
+        <div id="div-card-group" class="row">
+        </div>
+        <footer class="pt-4 my-md-5 pt-md-5 border-top">
+            <div class="row">
+                <div class="col-12 col-md">
+                    <div class="row">
+                        <div class="col">
+                            <p class="d-block mb-3 text-muted">© 2020</p>
+                        </div>
+                        <div class="col">
+                            <p>Feito com <i class="fas fa-heart"></i> e <i class="fab fa-js"></i></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <div class="col">
+
+                            <p><i class="fas fa-globe"></i> Português (BR)</p>
+                        </div>
+                        <div class="col">
+                            <!-- <div class="col-md-4">
+                                    <a href="https://github.com/karenngomes/" target="_blank"><i
+                                            class="fab fa-github-square"></i></a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="https://twitter.com/gomesskaren/" target="_blank"><i
+                                            class="fab fa-twitter"></i></a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a href="https://instagram.com/karennayarag/" target="_blank"><i
+                                            class="fab fa-instagram"></i></a>
+                                </div> -->
+                            <ul class="list-unstyled text-small social-networks">
+                                <li><a href="https://github.com/karenngomes/" target="_blank"><i
+                                            class="fab fa-github-square fa-lg"></i></a></li>
+                                <li><a href="https://twitter.com/gomesskaren/" target="_blank"><i
+                                            class="fab fa-twitter fa-lg"></i></a>
+                                </li>
+                                <li><a href="https://instagram.com/karennayarag/" target="_blank"><i
+                                            class="fab fa-instagram fa-lg"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script src="./script.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
