--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
                 <div class="card-body">
                     <form id="form-search" onsubmit="event.preventDefault()">
                         <div class="form-row">
-                            <div class="col-md-4 mb-3">
+                            <div class="col-md-3 mb-3">
                                 <label for="checkin">Check-in</label>
                                 <input type="date" class="form-control" id="checkin">
                             </div>
-                            <div class="col-md-4 mb-3">
+                            <div class="col-md-3 mb-3">
                                 <label for="checkout">Checkout</label>
                                 <input type="date" class="form-control" id="checkout">
                             </div>
-                            <button type="submit" onclick="handleClickSearch()"
-                                class="btn btn-outline-success btn-search"><i class="fas fa-search"></i>
-                                Buscar</button>
+                            <div class="col div-btn-search">
+                                <button type="submit" onclick="handleClickSearch()" class="btn btn-outline-success"><i
+                                        class="fas fa-search"></i>
+                                    Buscar</button>
+                            </div>
                         </div>
                     </form>
                 </div>
