--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </footer>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="./js/index.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
