--- a/index.html
+++ b/index.html
@@ -7,17 +7,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Airbngama</title>
 </head>
 
 <body>
+
+    <div id="infowindow-content">
+        <img src="" width="16" height="16" id="place-icon">
+        <span id="place-name" class="title"></span><br>
+        <span id="place-address"></span>
+    </div>
     <div class="container">
+
         <div id="div-row-search" class="row">
             <div class="card">
                 <div class="card-body">
                     <form id="form-search" onsubmit="event.preventDefault()">
                         <div class="form-row">
+                            <div class="col-md-3 mb-3">
+                                <label for="location-search">Localização</label>
+                                <input type="text" class="form-control" id="location-search"
+                                    placeholder="Para onde você vai?">
+                            </div>
                             <div class="col-md-3 mb-3">
                                 <label for="checkin">Check-in</label>
                                 <input type="date" class="form-control" id="checkin">
@@ -35,6 +47,9 @@
                     </form>
                 </div>
             </div>
+        </div>
+        <div id="div-map" class="row">
+            <div id="map"></div>
         </div>
         <div id="div-card-group" class="row">
         </div>
@@ -87,6 +102,10 @@
     </div>
 
     <script src="./js/index.js"></script>
+    <script src="./js/map.js"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABtuIDPvt_qJD-Iw2NdxKT61BpAOEm720&language=pt&libraries=places&callback=initMap"
+        async defer></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
