refactor: refatora footer

--- a/index.html
+++ b/index.html
@@ -53,50 +53,27 @@
         </div>
         <div id="div-card-group" class="row">
         </div>
+
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
-                <div class="col-12 col-md">
-                    <div class="row">
-                        <div class="col">
-                            <p class="d-block mb-3 text-muted">© 2020</p>
-                        </div>
-                        <div class="col">
-                            <p>Feito com <i class="fas fa-heart"></i> e <i class="fab fa-js"></i></p>
-                        </div>
-                    </div>
+                <div class="col-sm">
+                    <p>Made with <i class="fas fa-heart"></i> and <i class="fab fa-js"></i></p>
                 </div>
-                <div class="col">
-                    <div class="row">
-                        <div class="col">
-
-                            <p><i class="fas fa-globe"></i> Português (BR)</p>
-                        </div>
-                        <div class="col">
-                            <!-- <div class="col-md-4">
-                                    <a href="https://github.com/karenngomes/" target="_blank"><i
-                                            class="fab fa-github-square"></i></a>
-                                </div>
-                                <div class="col-md-4">
-                                    <a href="https://twitter.com/gomesskaren/" target="_blank"><i
-                                            class="fab fa-twitter"></i></a>
-                                </div>
-                                <div class="col-md-4">
-                                    <a href="https://instagram.com/karennayarag/" target="_blank"><i
-                                            class="fab fa-instagram"></i></a>
-                                </div> -->
-                            <ul class="list-unstyled text-small social-networks">
-                                <li><a href="https://github.com/karenngomes/" target="_blank"><i
-                                            class="fab fa-github-square fa-lg"></i></a></li>
-                                <li><a href="https://twitter.com/gomesskaren/" target="_blank"><i
-                                            class="fab fa-twitter fa-lg"></i></a>
-                                </li>
-                                <li><a href="https://instagram.com/karennayarag/" target="_blank"><i
-                                            class="fab fa-instagram fa-lg"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-
+                <div class="col-sm">
+                    <p class="text-muted">© 2020 Karen Gomes, All Right Reserved.</p>
                 </div>
+                <div class="col-sm social-networks">
+                    <ul class="list-unstyled text-small">
+                        <li><a href="https://github.com/karenngomes/" target="_blank"><i
+                                    class="fab fa-github-square fa-lg"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/karenngomes/" target="_blank"><i
+                                    class="fab fa-linkedin fa-lg"></i></a></li>
+                        <li><a href="https://twitter.com/gomesskaren/" target="_blank"><i
+                                    class="fab fa-twitter-square fa-lg"></i></a>
+                        </li>
+                    </ul>
+                </div>
+
             </div>
         </footer>
     </div>
@@ -104,7 +81,7 @@
     <script src="./js/index.js"></script>
     <script src="./js/map.js"></script>
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABtuIDPvt_qJD-Iw2NdxKT61BpAOEm720&language=pt&libraries=places&callback=initMap"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABtuIDPvt_qJD-Iw2NdxKT61BpAOEm720&language=pt-BR&libraries=places&callback=initMap"
         async defer></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
