fix: conserta footer

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <p>Made with <i class="fas fa-heart"></i> and <i class="fab fa-js"></i></p>
                 </div>
                 <div class="col-sm">
-                    <p class="text-muted">© 2020 Karen Gomes, All Right Reserved.</p>
+                    <p class="text-muted">© 2020 Karen Gomes, Inc. All rights reserved.</p>
                 </div>
                 <div class="col-sm social-networks">
                     <ul class="list-unstyled text-small">
