refactor: refatora criação dos cards

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="div-map" class="row">
             <div id="map"></div>
         </div>
-        <div id="div-card-group" class="row">
+        <div id="div-cards-group" class="row">
         </div>
 
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
