feat: coloca paginação

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
     <script src="./js/index.js"></script>
     <script src="./js/map.js"></script>
+    <script src="./js/pagination.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABtuIDPvt_qJD-Iw2NdxKT61BpAOEm720&language=pt-BR&libraries=places,geometry&callback=initialize"
         async defer></script>
