feat: adiciona navbar e refatora css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="./assets/airbngama.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -13,7 +14,47 @@
 
 <body>
     <div class="container">
-        <div><select id="locationSelect" style="width: 10%; visibility: hidden"></select></div>
+        <nav class="navbar border-bottom fixed-top navbar-light">
+            <a class="navbar-brand" href="#">
+                <img src="./assets/airbngama.png" width="45" height="45" alt="">
+            </a>
+            <div class="my-2 my-lg-0">
+                <!-- <div id="div-me" class="row"> -->
+                <a id="btn-about-me" href="https://about.me/karenngomes" target="_blank">
+                    <p>Karen</p>
+                    <img src="./assets/me.jpg" width="30" height="35" alt="" />
+                </a>
+                <!-- </div> -->
+                <!-- <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul> -->
+            </div>
+            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+            </div> -->
+        </nav>
         <div id="div-row-search" class="row">
             <div class="card">
                 <div class="card-body">
@@ -82,7 +123,7 @@
     </div>
 
     <script src="./js/index.js"></script>
-    <script src="./js/map.js"></script>
+    <script src="./js/maps.js"></script>
     <script src="./js/pagination.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABtuIDPvt_qJD-Iw2NdxKT61BpAOEm720&language=pt-BR&libraries=places,geometry&callback=initialize"
