--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <nav class="navbar border-bottom fixed-top navbar-light">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="https://airbngama.netlify.app/">
                 <img src="./assets/airbngama.png" width="45" height="45" alt="">
             </a>
             <div class="my-2 my-lg-0">
@@ -66,6 +66,7 @@
             <div id="map"></div>
         </div>
         <div id="div-cards-group" class="row">
+            <h2 id="initial-text">Procure por estadias em Maceió</h2>
         </div>
 
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
