--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <div id="div-map" class="row show-map">
             <div id="map"></div>
         </div>
-        <div id="div-cards-group" class="row">
-            <h2 id="initial-text">Procure por estadias em Maceió</h2>
+        <div id="div-cards-group" class="row card-group-height">
+            <h2 class="initial-text">Procure por estadias em Maceió</h2>
         </div>
 
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
