feat: coloca link para o repositório

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="my-2 my-lg-0">
                 <a id="btn-about-me" href="https://about.me/karenngomes" target="_blank">
                     <p>Karen</p>
-                    <img src="./assets/me.jpg" width="30" height="35" alt="" />
+                    <img src="./assets/me.jpg" width="32" height="35" alt="" />
                 </a>
             </div>
         </nav>
@@ -70,12 +70,14 @@
         </div>
 
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
-            <div class="row">
+            <div class="row" style="">
                 <div class="col-sm">
                     <p>Made with <i class="fas fa-heart"></i> and <i class="fab fa-js"></i></p>
                 </div>
                 <div class="col-sm">
-                    <p class="text-muted">© 2020 Karen Gomes, Inc. All rights reserved.</p>
+                    <p class="text-muted">© 2020 Karen Gomes, Inc. All rights reserved. <br>See the <a
+                            href="https://github.com/karenngomes/airbngama" target="_blank"><i
+                                class="fa fa-code"></i></a></p>
                 </div>
                 <div class="col-sm social-networks">
                     <ul class="list-unstyled text-small">
