feat: 🎸 adiciona paginação

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
     <script src="./js/util.js"></script>
     <script src="./js/index.js"></script>
-    <!-- <script src="./js/maps.js"></script>
-    <script src="./js/pagination.js"></script> -->
+    <!-- <script src="./js/maps.js"></script> -->
+    <script src="./js/pagination.js"></script> 
     <!-- <script
         src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&language=pt-BR&libraries=places,geometry&callback=initialize"
         async defer></script> -->
