feat: 🎸 adiciona a api do google maps e mapas para os modais

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 
     <script src="./js/util.js"></script>
     <script src="./js/index.js"></script>
-    <!-- <script src="./js/maps.js"></script> -->
+    <script src="./js/maps.js"></script>
     <script src="./js/pagination.js"></script> 
-    <!-- <script
-        src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&language=pt-BR&libraries=places,geometry&callback=initialize"
-        async defer></script> -->
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABtuIDPvt_qJD-Iw2NdxKT61BpAOEm720&language=pt-BR"
+        async defer></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
