--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             </div>
                             <div class="col-md-3 mb-2">
                                 <label for="checkin">Check-in</label>
-                                <input type="date" class="form-control" onchange="handleChangeDate()"
+                                <input type="date" class="form-control" 
                                     id="checkin" required>
                                 <div class="invalid-feedback date-fields">
                                     Selecione uma data de checkin
@@ -48,7 +48,7 @@
                             </div>
                             <div class="col-md-3 mb-2">
                                 <label for="checkout">Checkout</label>
-                                <input type="date" class="form-control" onchange="handleChangeDate()"
+                                <input type="date" class="form-control" 
                                     id="checkout" required>
                                 <div class="invalid-feedback date-fields">
                                     Selecione uma data de checkout
