feat: 🎸 adiciona autocomplete ao mapa de busca

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 </div>
             </div>
         </div>
-        <!-- <div id="div-map" class="row show-map">
+        <div id="div-map" class="row show-map">
             <div id="map"></div>
-        </div> -->
+        </div>
         <div id="div-cards-group" class="row card-group-height">
             <!-- <h2 class="initial-text">Procure por estadias em Maceió</h2> -->
         </div>
@@ -102,7 +102,7 @@
     <script src="./js/maps.js"></script>
     <script src="./js/pagination.js"></script> 
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABtuIDPvt_qJD-Iw2NdxKT61BpAOEm720&language=pt-BR"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABtuIDPvt_qJD-Iw2NdxKT61BpAOEm720&language=pt-BR&libraries=places"
         async defer></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
